--- a/lib/Makefile
+++ b/lib/Makefile
@@ -44,9 +44,8 @@ endif
 
 # for osg and patented stuff
 ifeq ($(VE_PATENTED), TRUE)
-   EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_VolumeVis
+   EXTRA_INCLUDES+= -I${VE_SUITE_HOME}
    EXTRA_CXXFLAGS+= -D_OSG -DVE_PATENTED
-   EXTRA_PATH_FOR_SOURCES+= ${VE_SUITE_HOME}/VE_VolumeVis
    PATENTED_TAG = .vep
 endif
 
@@ -130,7 +129,7 @@ EXTRA_INCLUDES+= -I$(VE_SUITE_HOME) -I$(VE_SUITE_HOME)/VE_Xplorer
 EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Conductor/Framework
 EXTRA_INCLUDES+= -I${VE_SUITE_HOME}/VE_Builder/Translator
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_SceneGraph
-EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_VolumeVis
+EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_TextureBased
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Xplorer
 EXTRA_PATH_FOR_SOURCES+= ${VE_SUITE_HOME}/VE_Conductor/Framework
 EXTRA_PATH_FOR_SOURCES+= ${VE_SUITE_HOME}/VE_Builder/Translator
