--- a/VE_Conductor/GraphicalPluginLib.vcproj
+++ b/VE_Conductor/GraphicalPluginLib.vcproj
@@ -474,8 +474,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug_TAO_OSG|Win32"
-			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="./GraphicalPluginLib/$(ConfigurationName)"
+			IntermediateDirectory="./GraphicalPluginLib/$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE"
@@ -484,8 +484,8 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Zm800"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(OSGHOME)\include&quot;;./;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(OMNI_HOME)\include&quot;;&quot;$(CONDUCTOR_BASE_DIR)\impl&quot;;&quot;$(VE_SUITE_HOME)&quot;;&quot;$(VE_SUITE_HOME)\VE_SceneGraph&quot;;&quot;$(CONDUCTOR_BASE_DIR)\skel&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;;&quot;$(VE_SUITE_HOME)\VE_Conductor\Framework&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(XERCESCROOT)\include&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(VE_SUITE_HOME)\VESOpen\skel&quot;;&quot;$(VE_SUITE_HOME)\VE_VolumeVis&quot;;&quot;$(VE_SUITE_HOME)\VE_Builder\Translator&quot;;&quot;$(OSGHOME)\..\OpenThreads\include&quot;"
-				PreprocessorDefinitions="_DEBUG;_USRDLL;_OSG;VE_PATENTED;VTK44;TABLET;WIN32;_CONSOLE;_WIN32;_WINDOWS;_MT;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;WXMAKING_PLUGIN_DLL;_TAO"
+				AdditionalIncludeDirectories="&quot;$(OSGHOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(XERCESCROOT)\include&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(OSGHOME)\..\OpenThreads\include&quot;"
+				PreprocessorDefinitions="_DEBUG;_USRDLL;_OSG;VE_PATENTED;VTK44;TABLET;WIN32;_CONSOLE;_WIN32;_WINDOWS;_MT;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;VE_GRAPHICALPLUGINS_LIBRARY;_TAO"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BufferSecurityCheck="FALSE"
@@ -505,18 +505,18 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vpr_d.lib vrj_d.lib vrj_ogl_d.lib osg.lib osgUtil.lib osgDB.lib OpenThreadsWin32.lib Producer.lib libnspr4.lib jccl_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib omniORB405_rtd.lib omnithread30_rtd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib xerces-c_2D.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib wxbase26d.lib wxmsw26d_core.lib VE_SceneGraph_osgd.lib"
+				AdditionalDependencies="vpr_d.lib vrj_d.lib vrj_ogl_d.lib osgd.lib osgUtild.lib osgDBd.lib OpenThreadsWin32d.lib Producerd.lib libnspr4.lib jccl_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib xerces-c_2D.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib wxbase26d.lib wxmsw26d_core.lib VE_SceneGraph_osgd.lib VEConductorLib_d.lib VEXplorerLib_tao_osg_d.lib VEUtilLib_tao_osg_d.lib"
 				ShowProgress="0"
-				OutputFile="$(VE_SUITE_HOME)/lib/win32/GraphicalPlugin.dll"
+				OutputFile="$(VE_SUITE_HOME)/lib/win32/GraphicalPlugin_tao_osg_d.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="FALSE"
 				AdditionalLibraryDirectories="&quot;$(OSGHOME)\lib&quot;;&quot;$(OSGHOME)\..\OpenThreads\lib\win32&quot;;&quot;$(OSGHOME)\..\Producer\lib&quot;;&quot;$(VTK_HOME)\lib\vtk&quot;;&quot;$(VTK_HOME)\bin\debug&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(XERCESCROOT)\lib&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;;&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\BiDir_GIOP&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;"
 				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile=".\Debug_TAO_OSG/GraphicalPlugin.pdb"
+				ProgramDatabaseFile="$(OutDir)/GraphicalPlugin_tao_osg_d.pdb"
 				SubSystem="1"
-				ImportLibrary="$(VE_SUITE_HOME)/lib/win32/GraphicalPlugin.lib"
+				ImportLibrary="$(VE_SUITE_HOME)/lib/win32/GraphicalPlugin_tao_osg_d.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
@@ -553,37 +553,10 @@
 			<File
 				RelativePath="$(VE_SUITE_HOME)\VE_Xplorer\cfdVEBaseClass.cxx">
 			</File>
-			<File
-				RelativePath="..\VE_Xplorer\cfdVectorBase.cxx">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\interface.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\package.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\string_ops.cpp">
-			</File>
 		</Filter>
 		<Filter
 			Name="headers"
 			Filter=".h">
-			<File
-				RelativePath="..\VE_Xplorer\cfdDigitalAnalogGauge.h">
-			</File>
-			<File
-				RelativePath="..\VE_Xplorer\cfdReadParam.h">
-			</File>
-			<File
-				RelativePath="..\VE_TextureBased\cfdTextureBasedVizHandler.h">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Xplorer\cfdVEBaseClass.h">
-			</File>
-			<File
-				RelativePath="..\VE_Xplorer\cfdVectorBase.h">
-			</File>
 		</Filter>
 	</Files>
 	<Globals>
