--- a/VE_Conductor/VE_ConductorLib.vcproj
+++ b/VE_Conductor/VE_ConductorLib.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="GUIPluginLib"
+	Name="VE_ConductorLib"
 	ProjectGUID="{3BDA598D-7DFD-4926-82E9-68528528A715}"
 	SccProjectName=""
 	SccLocalPath="">
@@ -75,16 +75,16 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\Debug"
-			IntermediateDirectory=".\Debug"
+			OutputDirectory=".\VE_ConductorLib\$(ConfigurationName)"
+			IntermediateDirectory=".\VE_ConductorLib\$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(VE_SUITE_HOME)\VE_Conductor\Framework&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(XERCESCROOT)\src&quot;;..\;&quot;$(VE_SUITE_HOME)\VE_Xplorer&quot;"
-				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;__WXDEBUG__;__WXMSW__;WXUSINGDLL;WXMAKING_PLUGIN_DLL;_USRDLL;DLL_EXPORTS;WINDLL_EXPORTS;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
+				AdditionalIncludeDirectories="&quot;$(XERCESCROOT)\src&quot;;&quot;$(VE_SUITE_HOME)&quot;"
+				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;__WXDEBUG__;WXUSINGDLL;VE_CONDUCTOR_LIBRARY;_USRDLL;DLL_EXPORTS;WINDLL_EXPORTS;_REENTRANT;_STLP_USE_OWN_NAMESPACE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -100,14 +100,14 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="xerces-c_2d.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib wxbase26d.lib wxmsw26d_core.lib"
-				OutputFile="$(VE_SUITE_HOME)\lib\win32\GUIPlugin.dll"
+				AdditionalDependencies="xerces-c_2d.lib odbc32.lib odbccp32.lib comctl32.lib rpcrt4.lib wsock32.lib"
+				OutputFile="$(VE_SUITE_HOME)\lib\win32\VEConductorLib_d.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;"
+				AdditionalLibraryDirectories="&quot;$(XERCESCROOT)\Build\Win32\VC7\Debug&quot;"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile=".\Debug/GUIPlugin.pdb"
-				ImportLibrary="$(VE_SUITE_HOME)\lib\win32\GUIPlugin.lib"
+				ProgramDatabaseFile="$(OutDir)/VEConductorLib_d.pdb"
+				ImportLibrary="$(VE_SUITE_HOME)\lib\win32\VEConductorLib_d.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
@@ -146,34 +146,13 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat;f90;for;f;fpp">
 			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\FinancialDialog.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\interface.cpp">
 			</File>
 			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\Geometry.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\package.cpp">
 			</File>
 			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\ListTable.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\Plugin_base.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\PortDialog.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\ResultPanel.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\StringParse.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\TexTable.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\TextResultDialog.cpp">
-			</File>
-			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\UIDialog.cpp">
+				RelativePath="$(VE_SUITE_HOME)\VE_Conductor\Framework\string_ops.cpp">
 			</File>
 		</Filter>
 		<Filter
