--- a/VE_Xplorer/VE_UtilLib.vcproj
+++ b/VE_Xplorer/VE_UtilLib.vcproj
@@ -543,7 +543,7 @@
 		</Configuration>
 		<Configuration
 			Name="Debug_TAO_OSG|Win32"
-			OutputDirectory="./VE_UtilLib/$(ConfigurationName)"
+			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory="./VE_UtilLib/$(ConfigurationName)"
 			ConfigurationType="2"
 			UseOfMFC="0"
@@ -553,7 +553,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Zm800"
 				Optimization="0"
-				AdditionalIncludeDirectories="./;&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;;&quot;$(XERCESCROOT)\src&quot;"
+				AdditionalIncludeDirectories="&quot;$(VTK_HOME)\include\vtk&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(XERCESCROOT)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;;&quot;$(XERCESCROOT)\src&quot;"
 				PreprocessorDefinitions="_DEBUG;_OSG;VE_UTIL_LIBRARY;VE_PATENTED;WXUSINGDLL;VTK44;TABLET;WIN32;_CONSOLE;_WIN32;_TAO;__WXDEBUG__;WXDEBUG=1;_WINDOWS;_MT;_STLP_USE_OWN_NAMESPACE;VTK_STREAMS_FWD_ONLY"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -570,16 +570,16 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib comctl32.lib ws2_32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib xerces-c_2D.lib wxbase26d.lib wxmsw26d_core.lib libboost_filesystem-vc71-mt-gd-1_32.lib"
 				ShowProgress="0"
-				OutputFile="$(VE_SUITE_HOME)\lib\win32\VEUtilLib_tao_osg_d.dll"
-				LinkIncremental="1"
+				OutputFile="$(OutDir)\VEUtilLib_tao_osg_d.dll"
+				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories="&quot;$(VTK_HOME)\lib\vtk&quot;;&quot;$(VTK_HOME)\bin\debug&quot;;&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\BiDir_GIOP&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(XERCESCROOT)\lib&quot;;&quot;$(XERCESCROOT)\\Build\Win32\VC7\Debug&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;"
 				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/VE_UtilLib_d.pdb"
+				ProgramDatabaseFile="$(IntDir)/VE_UtilLib_d.pdb"
 				SubSystem="1"
-				ImportLibrary="$(VE_SUITE_HOME)\lib\win32\VEUtilLib_tao_osg_d.lib"
+				ImportLibrary="$(OutDir)\VEUtilLib_tao_osg_d.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
