--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -542,8 +542,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug_TAO_OSG|Win32"
-			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(VE_SUITE_HOME)/bin/win32"
+			IntermediateDirectory="./VE_Xplorer/$(ConfigurationName)"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE"
@@ -567,16 +567,16 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="GraphicalPlugin.lib VE_SceneGraph_osgd.lib VE_TextureBased_osgd.lib vpr_d.lib vrj_d.lib vrj_ogl_d.lib osg.lib osgUtil.lib osgDB.lib OpenThreadsWin32.lib Producer.lib libnspr4.lib jccl_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib xerces-c_2D.lib wxbase26d.lib wxmsw26d_core.lib"
+				AdditionalDependencies="vpr_d.lib vrj_d.lib vrj_ogl_d.lib osgd.lib osgUtild.lib osgDBd.lib OpenThreadsWin32d.lib Producerd.lib libnspr4.lib jccl_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib xerces-c_2D.lib wxbase26d.lib wxmsw26d_core.lib"
 				ShowProgress="0"
-				OutputFile="$(VE_SUITE_HOME)\bin\win32\project_tao_osgd.exe"
-				LinkIncremental="1"
+				OutputFile="$(OutDir)\project_tao_osgd.exe"
+				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories="&quot;$(VTK_HOME)\lib\vtk&quot;;&quot;$(OSGHOME)\lib&quot;;&quot;$(VTK_HOME)\bin\debug&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\BiDir_GIOP&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(XERCESCROOT)\lib&quot;;&quot;$(OSGHOME)\..\OpenThreads\lib\win32&quot;;&quot;$(OSGHOME)\..\Producer\lib&quot;;&quot;$(VE_SUITE_HOME)\lib\win32&quot;;&quot;$(XERCESCROOT)\\Build\Win32\VC7\Debug&quot;"
 				IgnoreAllDefaultLibraries="FALSE"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile=".\Debug/VE_Xplorer.pdb"
+				ProgramDatabaseFile="$(IntDir)/VE_Xplorer.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
@@ -869,6 +869,12 @@
 				RelativePath=".\cfdVjObsWrapper.cxx">
 			</File>
 			<File
+				RelativePath="..\VEOpen\skel\moduleC.cpp">
+			</File>
+			<File
+				RelativePath="..\VEOpen\skel\moduleS.cpp">
+			</File>
+			<File
 				RelativePath="..\Ve_ce\Network_Exec.cpp">
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -1020,6 +1026,12 @@
 						Name="VCCLCompilerTool"
 						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\VEOpen\skel\VjObsC.cpp">
+			</File>
+			<File
+				RelativePath="..\VEOpen\skel\VjObsS.cpp">
 			</File>
 		</Filter>
 		<Filter
